--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,1 +1,23 @@
-<h2>Hello</h2>
+<div class="container">
+  <h2>Speakers</h2>
+
+
+  <% @items.each do |item| %>
+    <div class="card-product">
+      <div>
+      <img src="<%= item.image_url %>">
+      </div>
+      <div class="card-product-infos">
+        <h2><%= item.name %></h2>
+        <p>Product description with <strong>relevant info</strong> only.</p>
+      </div>
+    </div>
+
+  <% end %>
+  <%= link_to "create new",  new_item_path(@items) %>
+  <%= link_to 'Delete', items_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+</div>
+
+
+
+
