--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -10,12 +10,11 @@
       <div class="card-product-infos">
         <h2><%= item.name %></h2>
         <p>Product description with <strong>relevant info</strong> only.</p>
+        <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
-
   <% end %>
   <%= link_to "create new",  new_item_path(@items) %>
-  <%= link_to 'Delete', items_path, method: :delete, data: { confirm: 'Are you sure?' } %>
 </div>
 
 
