--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Button</a>
+        <!-- <%= link_to "Button" %> -->
       </li>
       <li class="nav-item">
         <!-- <a class="nav-link" href="/users/sign_in">Login</a> -->
