created the option to add a picture when you create an Item. Added the gem files for it. created some migration. You can also add picture to your avatar. and I change the show page to display the picture that the user adds.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,17 +4,20 @@
 
   <% @items.each do |item| %>
     <div class="card-product">
+     <%= link_to item_path(item) do %>
       <div>
       <img src="<%= item.image_url %>">
       </div>
       <div class="card-product-infos">
         <h2><%= item.name %></h2>
+      <% end %>
         <p>Product description with <strong>relevant info</strong> only.</p>
         <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
       </div>
     </div>
   <% end %>
   <%= link_to "create new",  new_item_path(@items) %>
+  <%= link_to "Home",  new_item_path(@items) %>
 </div>
 
 
