--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,9 +6,11 @@
       <%= f.input :price %>
       <%= f.input :condition %>
       <%= f.input :deposit %>
-      <%= f.input :image_url %>
       <%= f.input :delivery %>
       <%= f.input :policies %>
+      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :photo %>
+
     </div>
 
     <div class="form-actions">
