--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,7 @@
     <div class="card-product">
      <%= link_to item_path(item) do %>
       <div>
-      <img src="<%= item.image_url %>">
+        <%= cl_image_tag(item.photo) %>
       </div>
       <div class="card-product-infos">
         <h2><%= item.name %></h2>
