--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -5,12 +5,15 @@
 <h2>My rentals: </h2>
     <% @rentals.each do |rental| %>
       <div class="card-product">
+        <div>
+          <%= cl_image_tag(rental.item.photo) %>
+        </div>
         <div class="card-product-infos">
           <h2><%= rental.item.name %></h2>
-            <p> <%= rental.start_date %></p>
-            <p> <%= rental.end_date %></p>
-            <p> <%= rental.status %></p>
-            <%= link_to 'Delete', @item, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <p> <%= rental.start_date %></p>
+          <p> <%= rental.end_date %></p>
+          <p> <%= rental.status %></p>
+          <%= link_to 'Delete', rental_path(rental), method: :delete, data: { confirm: 'Are you sure?' } %>
         </div>
       </div>
     <% end %>
