--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,6 +4,7 @@
       <%= f.input :name %>
       <%= f.input :description %>
       <%= f.input :price %>
+      <%= f.input :location %>
       <%= f.input :condition %>
       <%= f.input :deposit %>
       <%= f.input :delivery %>
