--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -16,3 +16,12 @@
 <% end %>
 
 <%= link_to "Return", items_path %>
+
+<div
+    id="map"
+    style="width: 100%;
+    height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+></div>
+
