--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,11 @@
 <div class="container">
-  <h2>Speakers</h2>
+    <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
+  </div>
+</div>
 
 
   <% @items.each do |item| %>
@@ -16,13 +22,8 @@
       </div>
 
 
-
     </div>
   <% end %>
   <%= link_to "create new",  new_item_path(@items) %>
   <%= link_to "Home Page",  root_path %>
 </div>
-
-
-
-
