modify a navbar and a searchbar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -7,7 +7,14 @@
   flex-grow: 0;
 }
 
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+
+.fa-home {
+  color: #495057;
+  font-size: 30px;
+}
+
+
+.nav-link {
+  color: #495057 !important;
 }
 
