--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand" href="#">
-    <img src="" />
-    <%= link_to root_path do %>
-    <i class='fas fa-home'></i>
-    <% end %>
-  </a>
+      <%= link_to root_path do %>
+        <i class='fas fa-home'></i>
+      <% end %>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -19,7 +16,7 @@
       <%if user_signed_in? %>
        <li class="nav-item active">
         <!-- <a class="nav-link" href="#">Button</a> -->
-        <%= link_to "logout",  destroy_user_session_path, method: :delete, class: "nav-link" %>
+        <%= link_to "Logout",  destroy_user_session_path, method: :delete, class: "nav-link" %>
       </li>
       <li class="nav-item dropdown">
 
