--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
           <div>
             <%= cl_image_tag(item.photo) %>
           </div>
-          <div class="card-product-infos">git
+          <div class="card-product-infos">
             <h2><%= truncate(item.name, {length: 35}) %></h2>
             <% end %>
             <p><%= truncate(item.description, {length: 50}) %></p>
