--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -17,7 +17,7 @@
       <p>Policies: <%= @item.policies %></p>
     </div>
 
-    <div class="container">
+    <div class="container map_container">
       <div class="row" id="form_map">
         <div class="col-4" id="form">
           <%= simple_form_for [@item, @rental] do |f| %>
