--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,23 +1,31 @@
 .card-product {
   margin-bottom: 10px;
   overflow: hidden;
-  height: 120px;
+  height: 150px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  position: relative;
 }
 
-.card-product img {
+.card-product a {
   height: 100%;
-  width: 120px;
+  flex: 0 0 40%;
+  // width: 120px;
+}
+.card-product img {
+  width: 100%;
   object-fit: cover;
 }
 
+
+
 .card-product h2 {
-  font-size: 16px;
+  font-size: 15px;
   font-weight: bold;
-  margin: 0;
+  margin: 5px;
 }
 
 .card-product p {
@@ -25,14 +33,40 @@
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 5px;
+  color: $medium-gray;
+  font-weight: lighter;
 }
 
 .card-product .card-product-infos {
   padding: 16px;
 }
 
+a {
+  color: $dark-gray;
+  &:hover {
+    text-decoration: none;
+  }
+
+ }
+
+
 
 .card-dashboard{
   height:150px;
 }
+
+.card-product .card-trip-pricing {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.card-product-infos img {
+position: absolute;
+width: 32px;
+height: 32px;
+border-radius: 50%;
+bottom: 8px;
+right: 8px;
+}
+
