--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,11 +1,19 @@
-  .pending_status {
-   color: orange;
-  }
-  .accepted_status {
-   color: green;
-  }
-  .rejected_status {
-   color: red;
+  // .pending_status {
+  //  color: orange;
+  // }
+  // .accepted_status {
+  //  color: green;
+  // }
+  // .rejected_status {
+  //  color: red;
+  // }
+
+
+
+  h2 {
+    font-size: 20px;
+    padding-top: 30px;
+    padding-bottom: 10px;
   }
 
   .status {
@@ -16,25 +24,11 @@
       -webkit-appearance: none;
       -moz-appearance: none;
       appearance: none;
+      font-size:12px;
     }
   }
-  .my_bookings{
-    margin-top: 20px;
-    margin-bottom: 20px;
-  }
 
-  .card{
-    display: inline-block;
-    font-size: 15px;
-  }
-
-  .card-body{
-    p {
-      font-size: 12px;
-    }
-
-    a {
-      font-size: 16px;
-    }
-  }
+.fa-trash-alt{
+  color: gray;
+}
 
