--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
 
-<h2>My rentals </h2>
-<div class="container">
+<h2>my rentals </h2>
+<div class="card-deck">
+  <div class="card">
   <div class="row">
     <% @rentals.each do |rental| %>
       <div class="col-sm-4">
@@ -12,40 +13,51 @@
             </div>
           <% end %>
           <div class="card-product-infos">
-            <p class="card-text"> You booked this item from: <%= rental.start_date %> to <%= rental.end_date %></p>
-            <br>
+            <div class="card-title">
+             <h2><%= link_to rental.item.name,item_path(rental.item.id) %></h2>
+            </div>
+            <div class="card-text">
+            <p> You booked this item:
+              <%= rental.start_date %> to <%= rental.end_date %></p>
+            </div>
             <p> Status of your booking:</p>
             <div class = "status">
               <%= simple_form_for(rental) do |f| %>
                 <%= select_tag "status", options_for_select(Rental::STATUS, rental.status) %>
-                <%= f.submit("Update", class: "icon-cw") %>
+                <%= f.label, label: ("<i class='far fa-edit'></i>").html_safe %>
               <% end %>
             </div>
-            <div class="btn">
-              <%= link_to 'Delete', rental_path(rental), method: :delete, data: { confirm: 'Are you sure?' } %>
+            <div id="btn">
+              <%= link_to "<i class='far fa-trash-alt'></i>".html_safe, rental_path(rental), method: :delete, data: { confirm: 'Are you sure?' } %>
             </div>
           </div>
         </div>
       </div>
     <% end %>
   </div>
+  </div>
 </div>
 
-
-  <div class="my_items">
-    <h2>My items </h2>
-      <% @items.each do |item| %>
-        <div class="card-product">
-          <div>
-            <%= cl_image_tag(item.photo) %>
-          </div>
-          <div class="card-product-infos">
-            <h2><%= item.name %></h2>
-              <p>Product description with <strong>relevant info</strong> only.</p>
-                <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+<h2>my items </h2>
+  <div class="card-deck">
+    <div class="card">
+      <div class="row">
+        <% @items.each do |item| %>
+        <div class="col-sm-4">
+          <div class="card-product card-dashboard">
+            <div>
+              <%= cl_image_tag(item.photo) %>
+            </div>
+            <div class="card-product-infos">
+              <h2><%= item.name %></h2>
+                <p>Product description with <strong>relevant info</strong> only.</p>
+                  <%= link_to 'Delete', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+            </div>
           </div>
         </div>
-      <% end %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
 
