--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,7 +2,8 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
-  margin-bottom: 20px;
+  height: 100vh;
+
 }
 
 .banner h1 {
@@ -20,7 +21,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
-.bannerhomepage
-{
-height: 100vh;
-}
+// .bannerhomepage
+// {
+// height: 100vh;
+// }
