--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,15 @@
+
+
+body{
+  padding-top:56px;
+}
+
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 .navbar-lewagon .navbar-collapse {
