--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -5,13 +5,11 @@
   width: 260px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  display: flex_;
+  display: flex;
   align-items: center;
   font-size: 22px;
   font-weight: 30px;
   line-height: 1.8;
-  opacity: .8;
-  margin-bottom: 200px;
   margin-top: 1px;
   margin-right: 20px;
   border-radius: 6px;
@@ -26,13 +24,20 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 1.8;
-  opacity: .8;
-  margin-bottom: 200px;
   margin-top: 6px;
   color: #495057;
   height: 40px;
   border-radius: 6px;
 
+}
+
+.form-inline {
+  margin-bottom:100px;
+}
+
+ .fa_search {
+  color: #495057;
+  font-size: 30px;
 }
