made the validation on the forms

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner flex-container bannerhomepage" id="searchbar">
+<div class="banner flex-container" id="searchbar">
   <h1>Easy DJ</h1>
 
 
