--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,8 +16,8 @@
       <%= f.input :password_confirmation,
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
-      <%= f.input :photo %>
-      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :photo, required: true %>
+      <%= f.input :photo_cache, as: :hidden, required: true%>
     </div>
 
     <div class="form-actions">
