--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,16 +3,15 @@
     <div class="form-inputs">
       <%= f.input :name %>
       <%= f.input :description %>
+      <%= f.input :condition, as: :radio_buttons, collection: ["new", "slightly-used", "heavily-used"], item_wrapper_class: "inline_form_check" %>
       <%= f.input :price %>
       <%= f.input :location %>
-      <%= f.input :condition %>
       <%= f.input :deposit %>
       <%= f.input :delivery %>
-      <%= f.input :policies %>
-      <%= f.input :photo_cache, as: :hidden %>
-      <%= f.input :photo %>
       <%= f.input :start_date, as: :date, html5: true %>
       <%= f.input :end_date, as: :date, html5: true %>
+      <%= f.input :photo_cache, as: :hidden %>
+      <%= f.input :photo %>
 
     </div>
 
