--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -1,12 +1,9 @@
 #searchbar .form-control {
 
   overflow: hidden;
-  height: 60px;
-  width: 260px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  align-items: center;
   font-size: 22px;
   font-weight: 30px;
   line-height: 1.8;
@@ -14,6 +11,9 @@
   margin-right: 20px;
   border-radius: 6px;
   text-align: center;
+  align-items: center;
+  height: 60px;
+  width: 260px;
 
 }
 
@@ -23,13 +23,15 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
-  align-items: center;
   font-size: 20px;
   line-height: 1.8;
   margin-top: 6px;
   color: #495057;
-  height: 40px;
   border-radius: 6px;
+  align-items: center;
+  justify-content:center;
+  height: 60px;
+  width: 260px;
 
 }
 
