--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,9 +1,12 @@
+.showpage-container {
+  background: white;
+}
+
 .narrowed_container {
-  margin: 24px;
   padding: 8px;
   width: 800px;
   margin: 0 auto;
-  background-color: rgb(170, 166, 166);
+  background-color: rgb(210, 212, 217);
   border-radius: 8px;
   opacity: 0.9;
 }
@@ -12,7 +15,7 @@
   padding: 24px;
   color: white;
   text-align: center;
-  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
   opacity: 1;
 }
 
@@ -28,14 +31,7 @@
 }
 
 .item_details p {
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,1);
-}
-
-.background_image_speaker {
-  background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url("https://images.unsplash.com/photo-1517522628113-2a66a330a878?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-  background-size: cover;
-  padding: 24px;
+  color: rgb(93, 95, 99);
 }
 
 #form_map {
@@ -43,9 +39,9 @@
 }
 
 #form {
+  background: rgb(219, 221, 225);
   padding: 16px;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,1);
+  color: rgb(93, 95, 99);
   border: 2px solid gray;
   border-radius: 5px;
   width: 240px;
@@ -56,12 +52,10 @@
   justify-content: space-between;
 }
 
-
-
-
-
-
-
-
-
+.return-button {
+  background-color: rgb(231, 235, 239);
+  color: white;
+  margin-top: 8px;
+  border: solid 1px gray;
+}
 
