--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,6 +10,7 @@ body{
   position: fixed;
   width: 100%;
   top: 0;
+  z-index:100;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -19,7 +20,10 @@ body{
 
 .fa-napster {
   color: #495057;
-  font-size: 32px;
+  font-size: 30px;
+  justify-content: center;
+  align-content: center;
+  display:flex;
 }
 
 
