modify the logo in the navbar and add the PG search

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <%= link_to root_path do %>
-      <div id=flexbox>
+      <%= link_to root_path, class: "text-decoration-none" do %>
+      <div class="flex-box">
         <i class="fab fa-napster"></i> EasyDJ
       </div>
       <% end %>
