--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -24,10 +24,17 @@ body{
   justify-content: center;
   align-content: center;
   display:flex;
+  // margin-right:20px;
 }
 
 
 .nav-link {
   color: #495057 !important;
+}
+.flex-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
