modify the font of easydj ans the opacity of the searchbar and the button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div class="banner flex-container bannerhomepage" id="searchbar">
+  <link href="https://fonts.googleapis.com/css?family=Handlee&display=swap" rel="stylesheet">
   <h1>Easy DJ</h1>
 
 
