logic for dashboard rentals, bookings and items, working

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -14,8 +14,6 @@
    color: red;
   }
 
-
-
   h2 {
     font-size: 20px;
     padding-top: 30px;
@@ -34,5 +32,11 @@
     }
   }
 
+  #note-dashboard {
+    font-size: 12px;
+    color: red;
+  }
 
-
+  #header-dashboard {
+    font-size: 20px;
+  }
