--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -31,3 +31,34 @@
   align-items: center;
 }
 
+#user-profile {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  height: 100vh;
+  height: calc(100vh - 56px);
+  background-position: center bottom;
+}
+
+#user-profile h1 {
+  margin: 0;
+  color: white;
+  text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+  font-size: 40px;
+  // font-weight: bold;
+  padding-bottom: 30px;
+}
+
+#user-profile p {
+  font-size: 20px;
+  color: white;
+  opacity: .7;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+
+
+
+
+
+
