--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(http://newmoonriverinn.com/wp-content/uploads/parser/pioneer-casino-1.png);">
+<rail0.4)), url(http://newmoonriverinn.com/wp-content/uploads/parser/pioneer-casino-1.png);">
     <div class="container">
       <h1><strong>EasyDj</h1>
       <p id="rotate"> EadyDj
