changed form name

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -32,7 +32,7 @@
     </div>
 
     <div class="col-4">
-      <div class="form">
+      <div class="book-form">
         <div class="card form-card">
           <%= simple_form_for [@item, @rental] do |f| %>
             <%= f.input :start_date, as: :date, html5: true %>
