profile page working but some fixes to add

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,3 @@
-
-
 body{
   padding-top:56px;
 }
@@ -10,6 +8,7 @@ body{
   position: fixed;
   width: 100%;
   top: 0;
+  z-index: 9999;
 }
 
 .navbar-lewagon .navbar-collapse {
