--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -56,6 +56,13 @@
   justify-content: space-between;
 }
 
+.container-height {
+  min-height: calc(100vh - 111px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 
