--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,6 +6,7 @@
   height: 65px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  border-top: solid 1px rgba(217, 220, 221, 0.8)
 }
 .footer-links {
   display: flex;
