--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,6 +11,7 @@ body{
   top: 0;
   z-index: 9999;
   // opacity:0.6;
+  border-bottom: solid 1px rgba(217, 220, 221, 0.8)
 }
 
 .navbar-lewagon .navbar-collapse {
