--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -1,14 +1,14 @@
 .show-container {
   background-color: white;
   margin: 0 auto;
-  border-bottom: solid 1px rgba(217, 220, 221, 0.8)
 }
 
 .item-title {
   text-align: left;
   vertical-align: center;
   padding: 8px;
-  margin: 24px;
+  margin-top: 32px;
+  margin-right: 24px;
   color: #17252A;
   border: solid 1px rgba(217, 220, 221, 0.8);
   border-radius: 8px;
@@ -30,7 +30,7 @@
 
 .book-form {
   position: fixed;
-  top: 80px;
+  top: 88px;
   right: 96px;
 }
 
