--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="container" id="container-dashboard">
 
-<h2>my rentals </h2>
 
 <h1 id="header-dashboard"> Welcome to you dashboard <%= current_user.first_name %></h1>
+
 
 <h2>my bookings </h2>
 <p id="note-dashboard"> please confirm or cancel rental requests here </p>
