--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,7 +23,8 @@
 .card-product h2 {
   font-size: 15px;
   font-weight: bold;
-  margin: 5px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .card-product p {
@@ -39,6 +40,7 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
 
 a {
   color: $dark-gray;
@@ -66,12 +68,13 @@ a {
 
 .card-product .card-trip-pricing {
   position: absolute;
-  top: 0px;
-  right: 8px;
+  top: 5px;
+  right: 7px;
 }
 
 img.card-picture {
   height: 100%;
+  width: 150px;
 
 }
 
