--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container container-height">
+<div class="container container-height mt-4">
   <div class="row">
     <% @items.each do |item| %>
       <div class="col-sm-4">
