profile page: changed what you can see depending on whether you're looking at your own or someone else's, linked to profile page from show page

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -23,6 +23,15 @@
   margin: 24px;
 }
 
+.user-link {
+  width: 360px;
+  margin: 24px;
+  color: #17252A;
+  border: solid 1px rgba(217, 220, 221, 0.8);
+  padding: 8px;
+  border-radius: 5px;
+}
+
 .item-details {
   margin: 24px;
   color: #17252A;
