--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -11,10 +11,12 @@
   margin: 0;
   color: white;
   text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
-  // font-weight: bold;
-  padding-bottom: 30px;
-  font-family: 'Handlee', cursive;
-  font-size: 80px;
+  font-weight: bold;
+  padding-bottom: 40px;
+  letter-spacing: 8px;
+  font-family: 'Cedarville Cursive', cursive;
+  font-size: 100px;
+  opacity: 0.6px;
 }
 
 .banner p {
@@ -29,5 +31,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.txt-rotate {
+  text-align: center;
+  color: white;
+  font-size: 20px;
+  opacity: 0.8;
 }
 
