--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 
 <div class="banner flex-container" id="searchbar">
   <h1><strong>EasyDj</h1>
-      <p id="rotate"> EadyDj
+      <p id="rotate">
        <span
        class="txt-rotate"
        data-period="1800"
-       data-rotate='[ "Brings the party to you", "Invite some friends and start partying", "most definitely the best time you will have!", "" ]'></span>
+       data-rotate='[ "Brings the party to you", "Invite some friends and start partying", "most definitely the best time you will have!"]'></span>
 
   <%= form_tag items_path, method: :get, class: "form-inline" do %>
     <%= text_field_tag :query,
