--- a/app/assets/stylesheets/pages/_user-show.scss
+++ b/app/assets/stylesheets/pages/_user-show.scss
@@ -45,6 +45,20 @@
   }
 }
 
+#modal-footer a {
+  border: 1px $dark-gray solid;
+  border-radius: 2px;
+  color: $dark-gray;
+  background-color: white;
+  padding: 4px 16px;
+  transition: 0.2s;
+  &:hover {
+    color: white;
+    background-color: $dark-gray;
+    text-decoration: none;
+  }
+}
+
 #user-profile p {
   font-size: 20px;
   color: $medium-gray;
