--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -12,7 +12,7 @@
   color: white;
   text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
   font-weight: bold;
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   letter-spacing: 8px;
   font-family: 'Cedarville Cursive', cursive;
   font-size: 100px;
@@ -24,6 +24,7 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  margin-bottom: 20px;
 }
 
 .flex-container {
