--- a/app/assets/stylesheets/pages/_user-show.scss
+++ b/app/assets/stylesheets/pages/_user-show.scss
@@ -45,7 +45,7 @@
   }
 }
 
-#modal-footer a {
+.modal-footer a {
   border: 1px $dark-gray solid;
   border-radius: 2px;
   color: $dark-gray;
@@ -57,6 +57,9 @@
     background-color: $dark-gray;
     text-decoration: none;
   }
+}
+#my-border-footer {
+  border-top: 0;
 }
 
 #user-profile p {
