--- a/app/views/shared/_profile-pop.html.erb
+++ b/app/views/shared/_profile-pop.html.erb
@@ -2,17 +2,17 @@
 <div class="modal fade" id="user-modal-<%= user.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
       <div class="modal-content">
-          <div class="modal-header justify-content-center">
-              <h4 class="modal-title text-center'" id="myModalLabel">More About <%=user.first_name.capitalize %></h4>
-          </div>
-          <div class="modal-body">
+<!--           <div class="modal-header justify-content-center">
+ -->              <h4 class="modal-title text-center'" id="myModalLabel">More About <%=user.first_name.capitalize %></h4>
+<!--           </div>
+ -->          <div class="modal-body">
               <center>
               <img src="<%= user.photo  %>" name="aboutme" width="140" height="140" border="0" class="rounded-circle"></a>
               <h3 class="media-heading"><%= user.first_name.capitalize %> <%= user.last_name.capitalize %><small></small>
               </h3>
               <p>Email: <%= user.email %></p>
           </div>
-          <div class="modal-footer justify-content-center">
+          <div class="modal-footer justify-content-center" id="my-border-footer">
               <!-- <center> -->
              <%= link_to"Profile Page", user_path(user)%>
             <!-- </center> -->
