--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -24,11 +24,11 @@
 }
 
 .user-link {
-  width: 360px;
+  display: inline;
   margin: 24px;
   color: #17252A;
   border: solid 1px rgba(217, 220, 221, 0.8);
-  padding: 8px;
+  padding: 16px;
   border-radius: 5px;
 }
 
