added a banner in the index page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -31,3 +31,10 @@
   align-items: center;
 }
 
+#my-index-banner {
+  height: 100px;
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+}
+
